k8s/namespaces/media/huntarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: huntarr
  namespace: media
  labels:
    app.kubernetes.io/name: huntarr
    app.kubernetes.io/managed-by: flux
spec:
  selector:
    app.kubernetes.io/name: huntarr
    app.kubernetes.io/managed-by: flux
  ports:
    - port: 9705
      targetPort: 9705
      protocol: TCP
      name: huntarr
  type: ClusterIP
