k8s/namespaces/media/huntarr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-huntarr-https
  namespace: media
  labels:
    app.kubernetes.io/name: huntarr
    app.kubernetes.io/managed-by: flux
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`huntarr.oglesby.io`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: ingress
        - name: authentik
          namespace: ingress
      services:
        - name: huntarr
          port: 9705
  tls: 
    secretName: oglesby-io-tls
